fixed inline wrapping

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -309,11 +309,13 @@
 }
 
 .sequencing-studio {
+    white-space: nowrap;
     .track {
         // border: 1px solid blue;
         // height: 100px;
         // width: 750px;
-        // overflow-: hidden;
+        overflow-x: scroll;
+        overflow-y: hidden;
         .classic-background(@color1);
     }
     .measure,.beat {
